Fixing text visibility on promo

--- a/static/cocktail_style.css
+++ b/static/cocktail_style.css
@@ -18,7 +18,7 @@ div.crossnav {
 }
 
 div.crossnav a {
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
